feat: add search flow with template method