@@ -1,15 +1,13 @@
 package com.uni.petfinder.busqueda;
 
-import java.util.Arrays;
 import java.util.List;
 
-// RF 2.3: en adopción solo se devuelven resultados de protectoras/ONGs.
-public class AdoptionSearch implements SearchStrategy {
+// RF 2.3: adopción devuelve solo protectoras/ONGs. La búsqueda real no se
+// implementa; se deja el punto donde iría el motor.
+public class AdoptionSearch extends SearchTemplate {
 
     @Override
-    public List<String> search(ImageQuery query) {
-        return Arrays.asList(
-                "ONG Patitas Felices - perro similar en adopción",
-                "Protectora San Roque - perro similar en adopción");
+    protected List<String> search(ImageQuery query) {
+        return List.of("(resultados del catálogo de protectoras/ONGs)");
     }
 }
